--- a/src/Components/HeroArea/HeroArea.css
+++ b/src/Components/HeroArea/HeroArea.css
@@ -1,6 +1,6 @@
 #HeroArea{
-    min-height: 100vh;
-    min-width: 100vw;
+    height: 100vh;
+    width: 100vw;
     background: #f8fffd;
     z-index: -1;
     display: flex;
@@ -12,10 +12,6 @@
 }
 h1{
     margin: 0;
-}
-.RightSide img{
-    width: 300px;
-    border-radius: 100%;
 }
 .BoldText{
     font-weight: bolder;
