--- a/src/Components/MouseScroll/MouseScroll.css
+++ b/src/Components/MouseScroll/MouseScroll.css
@@ -1,5 +1,5 @@
 .mouse-position{
-    position: fixed;
+    position: absolute;
     bottom: 40px;
     right: 50%;
 }
